Phase 3: build out the Spring Boot backend
- Fix Flyway: remove the duplicate/incompatible V1__Initial_Schema.sql; the
  V1__create_profiles → V8 set is now internally consistent. Add V9 seeding
  events, study materials, assignments and notifications so the API-backed
  experience matches the offline one.
- Dev auth mode (AUTH_MODE=dev, default): DevAuthFilter treats the bearer token
  as a profile id and installs a JwtAuthenticationToken, so controllers using
  @AuthenticationPrincipal Jwt work with the existing frontend and no Clerk.
  Clerk JWT validation kept behind AUTH_MODE=clerk (conditional config).
- Build the missing module REST layers on the existing schema:
  canteen (menu + orders), library (books + issued-books + fines),
  academic (materials/assignments/groups/forums), campus (facilities/bookings/
  events), notifications. Thin controllers, record DTOs, one service per module.
- /api/v1/health endpoint; drop the second @SpringBootApplication class;
  compiler -parameters flag; CORS via app.cors.allowed-origins.
- Backend tests: CanteenServiceTest, LibraryServiceTest (Mockito, no DB).
- Frontend: reward points read straight from the profile, not a stale query.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>